es-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
  namespace: logging
spec:
  type: ClusterIP
  selector:
    component: elasticsearch
  ports:
  - name: http
    port: 9200
    protocol: TCP
    targetPort: 9200
