kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    component: kibana
spec:
  type: ClusterIP
  selector:
    component: kibana
  ports:
  - name: ui
    port: 5601
    protocol: TCP
