es-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: logging
spec:
  rules:
  - host: es.lab.int
    http:
      paths:
      - backend:
          serviceName: elasticsearch
          servicePort: 9200
        path: /
