kibana-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
spec:
  rules:
  - host: kibana.lab.int
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /
